# kernel

./: .gitignore  Dockerfile  README.md  gen_requirements.sh  pyproject.toml  requirements.txt  run.py  run.sh  run_test.sh  test_basics.py
.github/: pull_request_template.md
.github/workflows/: build-python-docker.yml  unit-test.yml
app/: __init__.py  app.py  routes.py  util.py
app/config/: column_meta.py  config.py  validation_meta.py
app/controllers/: __init__.py  data_types.py  objects.py
app/days/: actions.py  custom_types.py  objects.py  person_matching.py  suggest.py  validate.py
app/exceptions/: __init__.py  exceptions.py
app/handler/: __init__.py  column.py  table.py  validator.py
app/manager/: __init__.py  base.py
app/profiler/: __init__.py  base.py
app/resources/: __init__.py  base.py
data/: us_cities.txt  us_firstnames.txt  us_lastnames.txt  valid_domains.csv
examples/: MOCK_DATA.csv  MOCK_DATA.html  MOCK_DATA.json  MOCK_DATA.xls  MOCK_DATA.xlsx  col.json  columnAction.json  sample_data_action_return.json  sample_table_action.json  sample_table_info.json
tests/: output.csv  test_file.csv  test_payload.json
